gh-1980 - testing